--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <p>This is a simple webpage for Assignment 1 of COMP2245.</p>
     </header>
     <main>
-        <h2>Angeline</h2>
+        <h2>Angeline Charles</h2>
         <p>I am a Computer Science student who enjoys learning about web development. I want to improve my skills so I can build creative and useful projects for people to use.</p>
-        <img src="myphoto.jpg" alt="A picture representing me" width="250">
+        <img src="myphoto.jpeg" alt="A picture representing me" width="250">
     </main>
     <footer>
         <p>Copyright &copy; 2025 Angeline.</p>
